--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mochawesome-merge": "npx mochawesome-merge cypress/results/mochawesome/*.json > mochawesome.json && npx marge mochawesome.json",
     "delete-mochawesome-report": "rm -rf mochawesome-report/* || true",
     "cypress-regression-pack": "npm run delete-results && npm run delete-mochawesome-report && npm run triggerAllTests-headless && npm run mochawesome-merge",
-    "trigger-alltests-staging": "npx cypress run --env configFile=staging"
+    "trigger-alltests-staging": "npx cypress run --env configFile=staging",
+    "cypress-multi-browser":"npm run triggerAllTests-autoteststore -- --browser electron --headed & npm run triggerAllTests-autoteststore -- --browser edge --headed"
   },
   "author": "Varun Appalla",
   "license": "ISC",
